mainly filevalidation changes and pom.xml (Windows 10)

--- a/mergeprops/template.properties
+++ b/mergeprops/template.properties
@@ -6,12 +6,12 @@ serverName=???blahlsajlsdjflasdlfjal;
 ## db
 db.url=???http://mongodb-dev.com
 db.userName=admin
-db.password =???      
+     db.password =???      
 
 country=USA
-key1=laksjdf
-key2=laksjf
-key3=alskdfks
+key1=value1
+key2=value2
+key3=value3
 
 newkeyforsprint=hhh
 
